# autonomous-robot

./: .gitignore  README.md  init_robot.sh
init_robot/: init_general.txt  init_jetson.txt
src/bno085_ros2_driver/: package.xml  setup.cfg  setup.py
src/bno085_ros2_driver/bno085_ros2_driver/: imu_data_publisher.py
src/lsm9ds1_ros2_driver/: package.xml  setup.cfg  setup.py
src/lsm9ds1_ros2_driver/lsm9ds1_ros2_driver/: imu_data_publisher.py
src/pwm_node/: package.xml  setup.cfg  setup.py
src/pwm_node/pwm_node/: pwm_node.py
src/robot-nav/: CMakeLists.txt  package.xml
src/robot-nav/config/: ackermann_controller.yaml  drive_bot.rviz  ekf.yaml  imu_filter.yaml  joystick.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  navigate_w_recovery_and_replanning_only_if_path_becomes_invalid.xml  tricycle_controller.yaml  twist_mux.yaml  view_bot.rviz
src/robot-nav/description/: camera.xacro  depth_camera.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/robot-nav/launch/: imu.launch.py  joystick.launch.py  launch_robot.launch.py  launch_robot_ackermann.launch.py  launch_robot_tricycle.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  odom.launch.py  online_async_launch.py  rsp.launch.py  web.launch.py  ydlidar.launch.py
src/tf2_web_publisher/: CMakeLists.txt  package.xml
src/tf2_web_publisher/src/: camera_to_map_transformer.cpp  map_pose_publisher.cpp
